conformance_test/core_language_tests/positive_tests/09_test_configurations/0901_communication_ports/NegSem_0901_Communication_ports_004.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:9.1, Verify that it is not possible to map a connected port
 ** @verdict  pass reject
 ***************************************************/

/*NOTE: see Figure 7(b): GeneralComp port p1 is mapped to a TSI port P1.
 * Therefore mapping GeneralComp port p2 with TSI port P1 gives an error.
 * */



module NegSem_0901_Communication_ports_004 {
  
    type port MyPort message {
        inout integer
    } with {extension "internal"}

    type component GeneralComp
    {
        port MyPort p1;
        port MyPort p2;
    }
    
    type component SystemComp
    {
        port MyPort p1;
    }
	
    testcase TC_NegSem_0901_Communication_ports_004() runs on GeneralComp system SystemComp {
		
	//create a test component        
        var GeneralComp v_ptc := GeneralComp.create;
		connect(self:p1, v_ptc:p1);
		map(self:p1, system:p1); // error: mtc.p1 is already connected to v_ptc.p1
		setverdict(pass);
    }
	
    control{
        execute(TC_NegSem_0901_Communication_ports_004());
    }
}

